--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -59,33 +59,22 @@ select {
     width: 400px;
     margin: 0 auto;
     word-break: break-word;
-    background: -webkit-radial-gradient(
-            5% 5%,
+    background: -webkit-radial-gradient(5% 5%,
             ellipse,
             #8c5bd8 0%,
-            rgba(240, 172, 173, 0) 75%
-        ),
-        -webkit-radial-gradient(95% 5%, ellipse, #36d576 0%, rgba(
-                        248,
-                        174,
-                        75,
-                        0
-                    )
-                    75%),
-        -webkit-radial-gradient(95% 95%, ellipse, #36d576 -15%, rgba(
-                        219,
-                        176,
-                        72,
-                        0
-                    )
-                    75%),
-        -webkit-radial-gradient(5% 95%, ellipse, #8c5bd8 50%, rgba(
-                        194,
-                        132,
-                        233,
-                        0
-                    )
-                    75%);
+            rgba(240, 172, 173, 0) 75%),
+        -webkit-radial-gradient(95% 5%, ellipse, #36d576 0%, rgba(248,
+                174,
+                75,
+                0) 75%),
+        -webkit-radial-gradient(95% 95%, ellipse, #36d576 -15%, rgba(219,
+                176,
+                72,
+                0) 75%),
+        -webkit-radial-gradient(5% 95%, ellipse, #8c5bd8 50%, rgba(194,
+                132,
+                233,
+                0) 75%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -176,8 +165,11 @@ select {
     display: flex;
     flex-direction: column;
     background: #fff;
-    border-radius: 10px;
-    box-shadow: 0 0px 20px 12px rgb(134 134 134 / 25%);
+    /* border-radius: 10px; */
+    /* box-shadow: 0 0px 20px 12px rgb(134 134 134 / 25%); */
+    border-style: solid;
+    border-color: lightgrey;
+    border-width: 1px;
 }
 
 .payment-input-container {
@@ -208,33 +200,22 @@ select {
     top: -240px;
     left: -110px;
     z-index: 0;
-    background: -webkit-radial-gradient(
-            5% 5%,
+    background: -webkit-radial-gradient(5% 5%,
             ellipse,
             #f32f46 0%,
-            rgba(240, 172, 173, 0) 75%
-        ),
-        -webkit-radial-gradient(95% 5%, ellipse, #0263e0 0%, rgba(
-                        248,
-                        174,
-                        75,
-                        0
-                    )
-                    75%),
-        -webkit-radial-gradient(95% 95%, ellipse, #36d576 -15%, rgba(
-                        219,
-                        176,
-                        72,
-                        0
-                    )
-                    75%),
-        -webkit-radial-gradient(5% 95%, ellipse, #8c5bd8 50%, rgba(
-                        194,
-                        132,
-                        233,
-                        0
-                    )
-                    75%);
+            rgba(240, 172, 173, 0) 75%),
+        -webkit-radial-gradient(95% 5%, ellipse, #0263e0 0%, rgba(248,
+                174,
+                75,
+                0) 75%),
+        -webkit-radial-gradient(95% 95%, ellipse, #36d576 -15%, rgba(219,
+                176,
+                72,
+                0) 75%),
+        -webkit-radial-gradient(5% 95%, ellipse, #8c5bd8 50%, rgba(194,
+                132,
+                233,
+                0) 75%);
 }
 
 .payment-checkmark {
